feat: 유튜브 썸네일 추출기 웹사이트 구현

--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YouTube 대본 생성기</title>
+    <title>유튜브 썸네일 추출기</title>
+    <meta name="description" content="유튜브 영상 URL을 입력하면 썸네일 이미지를 추출하고 다운로드할 수 있습니다." />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
