SEO 최적화 및 디자인 개선: 파비콘, OG 이미지 추가, 색상 팔레트 변경

--- a/index.html
+++ b/index.html
@@ -1,16 +1,47 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>유튜브 썸네일 추출기</title>
-    <meta name="description" content="유튜브 영상 URL을 입력하면 썸네일 이미지를 추출하고 다운로드할 수 있습니다." />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- 기본 SEO -->
+  <title>유튜브 썸네일 추출기 - 무료로 고화질 썸네일 다운로드</title>
+  <meta name="description" content="유튜브 영상 URL만 입력하면 최고 화질(1280x720)부터 다양한 크기의 썸네일을 무료로 추출하고 다운로드할 수 있습니다." />
+  <meta name="keywords" content="유튜브 썸네일, 썸네일 추출, 썸네일 다운로드, YouTube thumbnail, 유튜브 썸네일 저장" />
+  <meta name="author" content="유튜브 썸네일 추출기" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- 파비콘 -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
+
+  <!-- Open Graph (페이스북, 카카오톡, 네이버 등) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="유튜브 썸네일 추출기 - 무료로 고화질 썸네일 다운로드" />
+  <meta property="og:description" content="유튜브 영상 URL만 입력하면 최고 화질 썸네일을 무료로 추출하고 다운로드할 수 있습니다." />
+  <meta property="og:image" content="/og-image.png" />
+  <meta property="og:locale" content="ko_KR" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="유튜브 썸네일 추출기 - 무료로 고화질 썸네일 다운로드" />
+  <meta name="twitter:description" content="유튜브 영상 URL만 입력하면 최고 화질 썸네일을 무료로 추출하고 다운로드할 수 있습니다." />
+  <meta name="twitter:image" content="/og-image.png" />
+
+  <!-- 네이버 검색 최적화 -->
+  <meta name="naver-site-verification" content="" />
+
+  <!-- 폰트 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
